--- a/.env
+++ b/.env
@@ -3,3 +3,9 @@ DB_PORT=5432
 DB_USER=supernova
 DB_PASSWORD=secret
 DB_NAME=jyldam
+
+MINIO_HOST=localhost
+MINIO_PORT=9000
+MINIO_USER=admin
+MINIO_PASSWORD=password
+MINIO_BUCKET=mybucket
