--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,19 @@
+variables:
+    IMAGE_NAME: supernova0730/ae86
+
 run_tests:
     image: golang
     script:
         - go test
+
+build_image:
+    image: docker:20.10.20
+    services:
+        - docker:20.10.20-dind
+    variables:
+        DOCKER_TLS_CERTDIR: "/certs"
+    before_script:
+        - docker login -u $REGISTRY_USER -p $REGISTRY_PASS 
+    script:
+        - docker build --tag $IMAGE_NAME .
+        - docker push $IMAGE_NAME
