--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,18 @@
 variables:
     IMAGE_NAME: supernova0730/ae86
 
+stages:
+    - test
+    - build
+
 run_tests:
+    stage: test
     image: golang
     script:
         - go test
 
 build_image:
+    stage: build
     image: docker:20.10.20
     services:
         - docker:20.10.20-dind
