--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ variables:
 stages:
     - test
     - build
+    - deploy
 
 run_tests:
     stage: test
@@ -23,3 +24,18 @@ build_image:
     script:
         - docker build --tag $IMAGE_NAME .
         - docker push $IMAGE_NAME
+
+deploy:
+    stage: deploy
+    before_script:
+        - chmod 400 $SSH_KEY
+    script:
+        - ssh -o StrictHostKeyChecking=no -i $SSH_KEY ubuntu@91.201.215.23 "
+            docker login -u $REGISTRY_USER -p $REGISTRY_PASS &&
+            docker ps -aq | xargs docker stop | xargs docker rm &&  
+            docker run -dp 80:8000 $IMAGE_NAME" 
+
+
+
+
+    
