--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ deploy:
         - chmod 400 $SSH_KEY
     script:
         - ssh -o StrictHostKeyChecking=no -i $SSH_KEY ubuntu@91.201.215.23 "
-            docker login -u $REGISTRY_USER --password-stdin $REGISTRY_PASS &&
+            echo $REGISTRY_PASS | docker login -u $REGISTRY_USER --password-stdin &&
             docker ps -aq | xargs docker stop | xargs docker rm &&  
             docker run -dp 80:8000 $IMAGE_NAME" 
 
