--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,6 @@ stages:
     - deploy
 
 run_tests:
-    stage: test
     image: golang
     script:
         - go test
@@ -29,12 +28,11 @@ deploy:
     stage: deploy
     before_script:
         - chmod 400 $SSH_KEY
-        - chmod 666 /var/run/docker.sock
     script:
         - ssh -o StrictHostKeyChecking=no -i $SSH_KEY ubuntu@91.201.215.23 "
-            echo $REGISTRY_PASS | docker login -u $REGISTRY_USER --password-stdin &&
             docker ps -aq | xargs docker stop | xargs docker rm &&  
             docker run -dp 80:8000 $IMAGE_NAME" 
+            # echo $REGISTRY_PASS | docker login -u $REGISTRY_USER --password-stdin &&
 
 
 
