--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,14 +2,8 @@ variables:
     IMAGE_NAME: supernova0730/ae86
 
 stages:
-    - test
     - build
     - deploy
-
-run_tests:
-    image: golang
-    script:
-        - go test
 
 build_image:
     stage: build
@@ -30,8 +24,8 @@ deploy:
         - chmod 400 $SSH_KEY
     script:
         - ssh -o StrictHostKeyChecking=no -i $SSH_KEY ubuntu@91.201.215.23 "
-            docker ps -aq | xargs docker stop | xargs docker rm &&  
-            docker run -dp 80:8000 $IMAGE_NAME" 
+            sudo docker ps -aq | xargs docker stop | xargs docker rm &&  
+            sudo docker run -dp 80:8000 $IMAGE_NAME" 
             # echo $REGISTRY_PASS | docker login -u $REGISTRY_USER --password-stdin &&
 
 
