--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ deploy:
         - chmod 400 $SSH_KEY
     script:
         - ssh -o StrictHostKeyChecking=no -i $SSH_KEY ubuntu@91.201.215.23 "
-            sudo docker ps -aq | xargs docker stop | xargs docker rm &&  
+            sudo docker ps -aq | xargs sudo docker stop | xargs sudo docker rm &&  
             sudo docker run -dp 80:8000 $IMAGE_NAME" 
             # echo $REGISTRY_PASS | docker login -u $REGISTRY_USER --password-stdin &&
 
