--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,8 +24,11 @@ deploy:
         - chmod 400 $SSH_KEY
     script:
         - ssh -o StrictHostKeyChecking=no -i $SSH_KEY ubuntu@91.201.215.23 "
-            sudo docker ps -aq | xargs sudo docker stop | xargs sudo docker rm &&  
-            sudo docker run -dp 80:8000 $IMAGE_NAME" 
+            sudo docker rm -f ae86 || true &&
+            sudo docker run --name=ae86 -dp 80:8000 $IMAGE_NAME"
+            
+            # sudo docker ps -aq | xargs sudo docker stop | xargs sudo docker rm &&  
+            # sudo docker run -dp 80:8000 $IMAGE_NAME" 
             # echo $REGISTRY_PASS | docker login -u $REGISTRY_USER --password-stdin &&
 
 
