Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,14 @@ deploy:
         - ssh -o StrictHostKeyChecking=no -i $SSH_KEY ubuntu@91.201.215.23 "
             sudo docker rm -f ae86 || true &&
             sudo docker image rm $IMAGE_NAME || true &&
-            sudo docker run --name=ae86 -dp 80:8000 -e DB_HOST=172.17.0.1 -e DB_PORT=5432 -e DB_USER=dovakhin -e DB_PASSWORD=yR25t2njlFcYMbWu -e DB_NAME=jyldam -e HTTP_HOST=0.0.0.0 $IMAGE_NAME"
+            sudo docker run --name=ae86 -dp 80:8000 
+            -e DB_HOST=172.17.0.1 
+            -e DB_PORT=5432 
+            -e DB_USER=dovakhin 
+            -e DB_PASSWORD=yR25t2njlFcYMbWu 
+            -e DB_NAME=jyldam 
+            -e HTTP_HOST=0.0.0.0 
+            $IMAGE_NAME"
             
             # sudo docker ps -aq | xargs sudo docker stop | xargs sudo docker rm &&  
             # sudo docker run -dp 80:8000 $IMAGE_NAME" 
