--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ deploy:
             -e DB_PASSWORD=$DB_PASSWORD 
             -e DB_NAME=$DB_NAME 
             -e HTTP_HOST=0.0.0.0 
-            $IMAGE_NAME"
+            $IMAGE_NAME --production"
 
 
 
