--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,7 @@ deploy:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASS
   script:
     - eval $(ssh-agent -s)
-    - echo "${SSH_KEY}" | tr -d '\r' | ssh-add - > /dev/null
+    - cat "$SSH_KEY" | tr -d '\r' | ssh-add - > /dev/null
     - docker compose -H "ssh://$SERVER_USER@$SERVER_IP" down --remove-orphans
     - docker compose -H "ssh://$SERVER_USER@SERVER_IP" pull
     - docker compose -H "ssh://$SERVER_USER@SERVER_IP" up -d
