--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: '3.9'
 
 services:
   ae86:
-    image: hub.docker.com/repository/docker/supernova0730/ae86
     build: .
     container_name: 'ae86'
     environment:
@@ -31,12 +30,10 @@ services:
       - mynet
 
   nginx:
-    image: nginx:latest
+    build: './nginx'
     container_name: nginx
     ports:
       - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - ae86
     networks:
