Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,11 +32,15 @@ deploy:
   before_script:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASS
   script:
-    - eval $(ssh-agent -s)
-    - cat "$SSH_KEY" | ssh-add - > /dev/null
-    - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" down --remove-orphans
-    - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" pull
-    - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" up -d
+    # - eval $(ssh-agent -s)
+    # - cat "$SSH_KEY" | ssh-add - > /dev/null
+    # - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" down --remove-orphans
+    # - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" pull
+    # - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" up -d
+    - ssh -o StrictHostKeyChecking=no -i $SSH_KEY $SERVER_USER@$SERVER_IP "
+      docker compose down --remove-orphans
+      docker compose pull
+      docker compose up -d"
   only:
     refs:
       - develop
