--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,20 +24,24 @@ build_image:
 
 deploy:
   stage: deploy
-  image: docker:20.10.20
-  services:
-    - docker:20.10.20-dind
-  variables:
-    DOCKER_TLS_CERTDIR: "/certs"
+  # image: docker:20.10.20
+  # services:
+  #   - docker:20.10.20-dind
+  # variables:
+  #   DOCKER_TLS_CERTDIR: "/certs"
   before_script:
-    - docker login -u $REGISTRY_USER -p $REGISTRY_PASS
+    # - docker login -u $REGISTRY_USER -p $REGISTRY_PASS
     - chmod 400 $SSH_KEY
   script:
-    - eval $(ssh-agent -s)
-    - cat "$SSH_KEY" | ssh-add - > /dev/null
-    - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" down --remove-orphans
-    - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" pull
-    - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" up -d
+    # - eval $(ssh-agent -s)
+    # - cat "$SSH_KEY" | ssh-add - > /dev/null
+    # - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" down --remove-orphans
+    # - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" pull
+    # - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" up -d
+    - ssh -o StrictHostKeyChecking=no -i $SSH_KEY $SERVER_USER@$SERVER_IP "
+        docker compose down --remove-orphans
+        docker compose pull
+        docker compose up -d"
   only:
     refs:
       - develop
