Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,8 +39,8 @@ deploy:
     # - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" pull
     # - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" up -d
     - ssh -o StrictHostKeyChecking=no -i $SSH_KEY $SERVER_USER@$SERVER_IP "
-        docker compose down --remove-orphans
-        docker compose pull
+        docker compose down --remove-orphans &&
+        docker compose pull &&
         docker compose up -d"
   only:
     refs:
