--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,9 +39,9 @@ deploy:
     # - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" pull
     # - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" up -d
     - ssh -o StrictHostKeyChecking=no -i $SSH_KEY $SERVER_USER@$SERVER_IP "
-        docker compose down --remove-orphans &&
-        docker compose pull &&
-        docker compose up -d"
+        docker compose -f docker-compose.yml down --remove-orphans &&
+        docker compose -f docker-compose.yml pull &&
+        docker compose -f docker-compose.yml up -d"
   only:
     refs:
       - develop
