--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,24 +24,21 @@ build_image:
 
 deploy:
   stage: deploy
-  # image: docker:20.10.20
-  # services:
-  #   - docker:20.10.20-dind
-  # variables:
-  #   DOCKER_TLS_CERTDIR: "/certs"
+  image: docker:20.10.20
+  services:
+    - docker:20.10.20-dind
+  variables:
+    DOCKER_TLS_CERTDIR: "/certs"
   before_script:
-    # - docker login -u $REGISTRY_USER -p $REGISTRY_PASS
+    - docker login -u $REGISTRY_USER -p $REGISTRY_PASS
     - chmod 400 $SSH_KEY
   script:
-    # - eval $(ssh-agent -s)
-    # - cat "$SSH_KEY" | ssh-add - > /dev/null
-    # - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" down --remove-orphans
-    # - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" pull
-    # - docker-compose -H "ssh://$SERVER_USER@$SERVER_IP" up -d
-    - ssh -o StrictHostKeyChecking=no -i $SSH_KEY $SERVER_USER@$SERVER_IP "
-        docker compose -f docker-compose.yml down --remove-orphans &&
-        docker compose -f docker-compose.yml pull &&
-        docker compose -f docker-compose.yml up -d"
+    - eval $(ssh-agent -s)
+    - cat "$SSH_KEY" | ssh-add - > /dev/null
+    - docker context create remote --docker "host=ssh://$SERVER_USER@$SERVER_IP"
+    - docker-compose --context remote down --remove-orphans
+    - docker-compose --context remote pull
+    - docker-compose --context remote up -d
   only:
     refs:
       - develop
