--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,8 +33,7 @@ deploy:
     - docker login -u $REGISTRY_USER -p $REGISTRY_PASS
     - chmod 400 $SSH_KEY
   script:
-    - eval $(ssh-agent -s)
-    - cat "$SSH_KEY" | ssh-add - > /dev/null
+    - ssh-add $SSH_KEY
     - docker context create remote --docker "host=ssh://$SERVER_USER@$SERVER_IP"
     - docker-compose --context remote down --remove-orphans
     - docker-compose --context remote pull
