--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,51 +1,51 @@
-variables:
-  SERVER_IP: 91.201.215.23
-  SERVER_USER: ubuntu
-
-stages:
-  - build
-  - deploy
-
-build_image:
-  stage: build
-  image: docker:20.10.20
-  services:
-    - docker:20.10.20-dind
-  variables:
-    DOCKER_TLS_CERTDIR: "/certs"
-  before_script:
-    - docker login -u $REGISTRY_USER -p $REGISTRY_PASS
-  script:
-    - docker compose build
-    - docker compose push
-  only:
-    refs:
-      - develop
-
-deploy:
-  stage: deploy
-  image: docker:20.10.20
-  services:
-    - docker:20.10.20-dind
-  variables:
-    DOCKER_TLS_CERTDIR: "/certs"
-  before_script:
-    - docker login -u $REGISTRY_USER -p $REGISTRY_PASS
-  script:
-    - eval $(ssh-agent -s)
-    - echo "$SSH_KEY" | tr -d '\r' | ssh-add -
-    - mkdir -p ~/.ssh
-    - chmod 700 ~/.ssh
-    - docker context create remote --docker "host=ssh://$SERVER_USER@$SERVER_IP"
-    - docker-compose --context remote down --remove-orphans
-    - docker-compose --context remote pull
-    - docker-compose --context remote up -d
-  only:
-    refs:
-      - develop
-
-
-
-
-
-    
+#variables:
+#  SERVER_IP: 91.201.215.23
+#  SERVER_USER: ubuntu
+#
+#stages:
+#  - build
+#  - deploy
+#
+#build_image:
+#  stage: build
+#  image: docker:20.10.20
+#  services:
+#    - docker:20.10.20-dind
+#  variables:
+#    DOCKER_TLS_CERTDIR: "/certs"
+#  before_script:
+#    - docker login -u $REGISTRY_USER -p $REGISTRY_PASS
+#  script:
+#    - docker compose build
+#    - docker compose push
+#  only:
+#    refs:
+#      - develop
+#
+#deploy:
+#  stage: deploy
+#  image: docker:20.10.20
+#  services:
+#    - docker:20.10.20-dind
+#  variables:
+#    DOCKER_TLS_CERTDIR: "/certs"
+#  before_script:
+#    - docker login -u $REGISTRY_USER -p $REGISTRY_PASS
+#  script:
+#    - eval $(ssh-agent -s)
+#    - echo "$SSH_KEY" | tr -d '\r' | ssh-add -
+#    - mkdir -p ~/.ssh
+#    - chmod 700 ~/.ssh
+#    - docker context create remote --docker "host=ssh://$SERVER_USER@$SERVER_IP"
+#    - docker-compose --context remote down --remove-orphans
+#    - docker-compose --context remote pull
+#    - docker-compose --context remote up -d
+#  only:
+#    refs:
+#      - develop
+#
+#
+#
+#
+#
+#
